# abovo

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  Dockerfile  Makefile  README-pypi.md  README.md  SECURITY.md  example.py  setup.py  test.py
.github/workflows/: codeql.yml  scorecard.yml  tests.yml
abovo/: __init__.py
docs/: api.rst  conf.py  conftest.py  index.rst  mock_modules.py
include/: Activation.hpp  DenseLayer.hpp  Loss.hpp  Matrix.hpp  Sequential.hpp
include/nn/: Activation.hpp  DenseLayer.hpp  Loss.hpp  MatMul.hpp  Matrix.hpp  Sequential.hpp
include/nn/matmul/: Metal.hpp  SIMD.hpp  SIMD_MT.hpp
include/nn/quantization/: Int8Matrix.hpp
pybind/: bindings.cpp
src/: Activation.cpp  DenseLayer.cpp  Loss.cpp  Matrix.cpp  Sequential.cpp
src/nn/: Activation.cpp  DenseLayer.cpp  Loss.cpp  MatMul.cpp  Matrix.cpp  Sequential.cpp
src/nn/activation/: Softmax.cpp
src/nn/loss/: CrossEntropy.cpp
src/nn/matmul/: Blocked.cpp  Metal.cpp  Naive.cpp  SIMD.cpp  SIMD_MT.cpp
src/nn/quantization/: Int8Matrix.cpp
tests/: main.cpp  optimizations.cpp  optimizations.md  test_activation_type.py  test_integration.py  test_loss_type.py  test_matmul_type.py  test_sequential.py  tests.py
tests/MNIST/: Loader.cpp  mnist.cpp  mnist_pytorch.py
tests/XOR/: xor.cpp
tests/optimizations/: optimizations.cpp
